# Python_Chatbot

./: .gitignore  Makefile  Makefile.venv  README.md  environment.yaml  pyproject.toml  requirements.txt
.dvc/: config
config/: main.yaml
config/model/: model1.yaml
config/model/QA/: distilbert.yaml
config/model/dialog/: blenderbot.yaml  dialogpt.yaml
config/model/retriever/: RAG.yaml
src/: app.py  basemodel.py  chatbot.py  models.py  utils.py
src/static/: script.js  stylesheet.css
src/templates/: index.html
